00-namespaces.yaml
#Namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service
  annotations:
   argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: upload-service
  annotations:
   argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-gateway
  annotations:
   argocd.argoproj.io/sync-wave: "-1"
