06-auth-service.yaml
# Auth Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace:  auth-service
  annotations:
   argocd.argoproj.io/sync-wave: "2"
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: auth-service
        image: ismail55/authservice:1.0.0
        imagePullPolicy: IfNotPresent  # Pull from registry
        ports:
        - containerPort: 8082
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: "64Mi"
            cpu: "50m"
        livenessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 5
---
# Auth Service Service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace:  auth-service
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP
